# PrefabClasses

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  differences_with_dataclasses.md  perf_results.md  prefab.py  pyproject.toml  readme.md  setup.cfg  test_prefab.py
.github/workflows/: auto_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml  python-publish.yml
dataclasses_test/: test_dataclasses_compat.py
docs/: api.md  basic_usage.md  compiled_construction.md  conf.py  dynamic_and_compiled.md  dynamic_construction.md  evil_imports.md  getting_started.md  index.md  pre_post_init.md  why_not_dataclasses.md
docs/extra/: dataclasses_differences.md  perf_results.md  performance_tests.md
perf/: cluegen.py  dataklasses.py  hyperfine_testmaker.py  perf_profile.py  perf_profile_compilation.py  profile.py
perf/hyperfine_testfiles/: testfile_maker.py
perf/serialization/: json_conversion_speed.py
src/prefab_classes/: __init__.py  __init__.pyi  _class_generator.py  _method_generators.py  _shared.py  _typing.py  constants.py  exceptions.py  funcs.py  hook.py  register.py  sentinels.py  serializers.py  shared.py
src/prefab_classes/compiled/: __init__.py  generator.py  import_hook.py  preview_source.py  rewrite_source.py
src/prefab_classes/dynamic/: __init__.py  _attribute_class.py  autogen.py  method_generators.py  prefab.py
src/prefab_classes/funcs/: __init__.py  _cache_funcs.py
src/prefab_classes/live/: __init__.py  _attribute_class.py  autogen.py  default_sentinels.py  method_generators.py  prefab.py
src/prefab_classes_hook/: __init__.py  import_hook.py
stubs/: WARNING.txt
stubs/prefab_classes/: __init__.pyi  _typing.pyi  constants.pyi  exceptions.pyi  funcs.pyi  sentinels.pyi
stubs/prefab_classes/compiled/: __init__.pyi  generator.pyi  rewrite_source.pyi
stubs/prefab_classes/dynamic/: __init__.pyi  _attribute_class.pyi  autogen.pyi  method_generators.pyi  prefab.pyi
stubs/prefab_classes_hook/: __init__.pyi
tests/: conftest.py  test_converter.py  test_creation.py  test_dunders.py  test_hint_syntax.py  test_inheritance.py  test_init.py  test_serialization.py  test_versions_match.py
tests/behaviour/: test_creation.py  test_dunders.py  test_inheritance.py  test_init.py  test_serialization.py
tests/compiled/: conftest.py  test_clearimport.py  test_import_compile.py  test_importhook.py  test_resulting_code.py  test_rewrite_py.py  test_slots.py
tests/compiled/compile_targets/: example_annotations.py  example_fallback.py  example_import_clear.py  example_import_clear2.py  (+13 more)
tests/dynamic/: test_attribute_template.py  test_compare_attrib.py  test_construction.py  test_dynamic_construction.py  test_dynamic_internals.py  test_internals.py  test_pre_post_init.py  test_slots_novalues.py  test_slotted_class.py
tests/live/: test_attribute_template.py  test_converter.py  test_creation.py  test_hint_syntax.py  test_inheritance.py  test_init.py  test_serialization.py
tests/shared/: conftest.py  test_converter.py  test_creation.py  test_dunders.py  test_frozen.py  test_funcs.py  test_hint_syntax.py  test_inheritance.py  test_init.py  test_kw_only.py  test_repr.py  test_serialization.py  test_test_config.py
tools/: merge_unmerge_stubs.py
(+26 files in other folders)
