[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''
(
    # Don't format generated code
    /(\_attribute\_class\.py)
    | /(example_to_compile_expected\.py)
)
'''

[tool.coverage.run]
omit = [
    "*/_attribute_template.py",
]
