[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name="prefab_classes"
description="Boilerplate Generator for Classes"
authors = [
  { name="David C Ellis" },
]
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ['version']
dependencies = [
    "typing_extensions; python_version < '3.11'"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "prefab_classes.__version__"}

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]
performance = ["attrs", "pydantic"]
docs = ["sphinx", "myst-parser", "sphinx_rtd_theme"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/davidcellis/PrefabClasses"
"Documentation" = "https://prefabclasses.readthedocs.io/"

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''
(
    # Don't format generated code
    /(\_attribute\_class\.py)
    | /(example_to_compile_expected\.py)
)
'''

[tool.coverage.run]
omit = [
    "*/_attribute_template.py",
]
