[metadata]
name = prefab_classes
version = 0.6.0-alpha.6
author = David C Ellis
description = Boilerplate Generator for Classes
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
python_requires = >=3.11

[options.extras_require]
TESTING =
    pytest
PERFORMANCE =
    attrs
    pydantic
