[metadata]
name = prefab_classes
version = 0.7.0
author = David C Ellis
description = Boilerplate Generator for Classes
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
python_requires = >=3.9

[options.extras_require]
TESTING =
    pytest
PERFORMANCE =
    attrs
    pydantic
