[metadata]
name = prefab_classes
version = 0.7.1
author = David C Ellis
description = Boilerplate Generator for Classes
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
python_requires = >=3.9
install_requires =
    typing_extensions; python_version < '3.11'

[options.extras_require]
TESTING =
    pytest
    pytest-cov
PERFORMANCE =
    attrs
    pydantic
